@@ -77,6 +77,10 @@ cong_editor_widget3_get_dispspec(CongEditorWidget3 *editor_widget);
 void 
 cong_editor_widget3_force_layout_update (CongEditorWidget3 *editor_widget);
 
+CongEditorNode*
+cong_editor_widget3_get_editor_node (CongEditorWidget3 *editor_widget,
+				     CongNodePtr node);
+
 GdkGC*
 cong_editor_widget3_get_test_gc (CongEditorWidget3 *editor_widget);
 
